<resources>
    <string name="app_name">proyecto</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logout">LOGOUT</string>
    <string name="postear_un_producto">Postear un producto</string>
    <string name="ingrese_el_nombre_del_producto">Ingrese el nombre del producto</string>
    <string name="ingrese_el_precio_del_producto">Ingrese el precio del producto</string>
    <string name="ingrese_las_caracter_sticas_del_producto">Ingrese las características del producto</string>
    <string name="ingrese_la_hora_de_inicio_de_la_subasta">Ingrese la hora de inicio de la subasta</string>
    <string name="ingrese_la_hora_de_fin_de_la_subasta">Ingrese la hora de fin de la subasta</string>
    <string name="postear">Postear</string>
    <string name="recargar_tu_billetera">Recargar tu billetera</string>
    <string name="dinero_actual_20_00_soles">Dinero actual: 20.00 soles</string>
    <string name="ingrese_el_precio_a_recargar_en_soles">Ingrese el precio a recargar en soles</string>
    <string name="recargar">Recargar</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña:</string>
    <string name="ingrese_su_correo_electr_nico">Ingrese su correo electrónico:</string>
    <string name="ingrese_su_nombre">Ingrese su nombre:</string>
    <string name="ingrese_su_dni">Ingrese su DNI:</string>
    <string name="logearse">LOGEARSE</string>
    <string name="login">LOGIN</string>
    <string name="tus_productos">TUS PRODUCTOS</string>
</resources>